--- a/index.html
+++ b/index.html
@@ -1189,8 +1189,15 @@ color: #777;
 
 
 
-<section>
-<center>  <h2 class="mb-5" style="font-weight: 430; font-size: 40px;">Top Colleges & Universities</h2></center>
+<section class="ftco-section">
+
+  <div class="row justify-content-center">
+    <div class="col-md-8 heading-section text-center mb-5" data-aos="fade-up" data-aos-duration="1000">
+     
+    <h2 class="mb-4">Top Colleges & Universities</h2>
+    </div>
+    </div>
+  
     <div class="container mb-5">
        <marquee  width="95%" direction="left" height="100px" scrollamount="10"> <div class="row g-5">
           <div class="col col-6 col-sm-6 col-md-4 col-xl-4 col-xxl-4 col-lg-4"><div class="card-collage "><center><a href="#gal9"><img src="images/u1.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u2.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u3.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u4.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u5.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u6.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u7.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u8.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u9.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u10.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u11.jpg" alt="High Edu" class="collage-img"></a></center></div></div>
