--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ typewriter();
 </section>
 
  
- <style>
+ <!-- <style>
   .Vission{
     margin-top: 40px;
   }
@@ -281,14 +281,17 @@ typewriter();
     font-weight: 500;
     font-size: 45px;
   }
-</style>
-<section class="Vission" >
+</style> -->
+<section class="ftco-section" >
   <div class="container " style="background-image: url('images/w2.jpg'); padding-left: 3%; padding-right: 3%; text-align: justify;">
 <div class="row">
-  <div class="col-md-6 mt-5 mb-1">
-      <div class="mission-para " data-aos="fade-up">
-  <center><h2 class="mission-para" data-aos="fade-up" >Mission</h2><hr></center>   </div>
-    <br>
+  <div class="col-md-6 mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-7 text-center heading-section" data-aos="fade-up" data-aos-duration="1000">
+      <h2 class="mb-5">Our Mission <hr></h2>
+      </div>
+      </div>
+   
     <p id="mission-para"> India is a knowledge economy, one that creates, disseminates, and uses knowledge to enhance its growth and development. The Team of Whatisnext believe that knowledge can empower the youth into a national asset by providing proper education and guidance.</p>
   </div>
  
@@ -302,7 +305,11 @@ typewriter();
 </div>
 
 </section>
+
+
  <style>
+ 
+
 hr{
   border: none;
   border-top: 3px solid #3a3280;
@@ -319,108 +326,6 @@ hr{
   
 </h1></header>
 
-<style>
-
-h1 {
-  font-family: "Montserrat Medium";
-  
-  
-  transform: scale(0.94);
-  animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
-}
-@keyframes scale {
-  100% {
-    transform: scale(1);
-  }
-}
-
-span {
-  display: inline-block;
-  opacity: 0;
-  filter: blur(4px);
-}
-
-span:nth-child(1) {
-  animation: fade-in 0.8s 0.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-span:nth-child(2) {
-  animation: fade-in 0.8s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-span:nth-child(3) {
-  animation: fade-in 0.8s 0.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-span:nth-child(4) {
-  animation: fade-in 0.8s 0.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-span:nth-child(5) {
-  animation: fade-in 0.8s 0.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-span:nth-child(6) {
-  animation: fade-in 0.8s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-span:nth-child(7) {
-  animation: fade-in 0.8s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-span:nth-child(8) {
-  animation: fade-in 0.8s 0.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-span:nth-child(9) {
-  animation: fade-in 0.8s 0.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-span:nth-child(10) {
-  animation: fade-in 0.8s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-span:nth-child(11) {
-  animation: fade-in 0.8s 1.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-span:nth-child(12) {
-  animation: fade-in 0.8s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-span:nth-child(13) {
-  animation: fade-in 0.8s 1.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-span:nth-child(14) {
-  animation: fade-in 0.8s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-span:nth-child(15) {
-  animation: fade-in 0.8s 1.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-span:nth-child(16) {
-  animation: fade-in 0.8s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-span:nth-child(17) {
-  animation: fade-in 0.8s 1.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-span:nth-child(18) {
-  animation: fade-in 0.8s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-@keyframes fade-in {
-  100% {
-    opacity: 1;
-    filter: blur(0);
-  }
-}
-
-</style>
-<!--Brian Tracy-->
 
   <section  class="features">
     <div class="feature card">
