--- a/application-form.html
+++ b/application-form.html
@@ -930,7 +930,7 @@
   <div class="container-book">
  <div class="card-book">
   <h1>Talk with a Mentor</h1>
-  <a href="contact.html"><button>Book video Session</button></a>
+  <a href="contact.html"><button>Book video Sessiond</button></a>
 </div></div>
 <script src="js/script.js"></script>
 <p style="font-size: 25px; text-align: center; justify-content: center;" class="mt-4 ">OR</p>
