--- a/application-form.html
+++ b/application-form.html
@@ -348,27 +348,12 @@
   padding-bottom: 50px;
   }
   
-  .m-r-45 {
-  margin-right: 45px;
-  }
-  
-  .m-r-55 {
-  margin-right: 30px;
-  }
+
   
   .m-b-55 {
   margin-bottom: 40px;
   }
-  @media (max-width: 767px) {
-    .m-r-55 {
-  margin-right: 185px;
-  }
-  }
-  @media (max-width: 426px) {
-    .m-r-55 {
-  margin-right: 265px;
-  }
-  }
+ 
   @media (max-width: 767px) {
     .m-b-55  {
     margin-bottom: 5px;
@@ -923,14 +908,14 @@
       /* Media queries for responsiveness */
       @media (max-width: 768px) {
           .card-book {
-              max-width: 95%;
+              max-width:95%;
           }
       }
   </style>
   <div class="container-book">
  <div class="card-book">
   <h1>Talk with a Mentor</h1>
-  <a href="contact.html"><button>Book video Sessiond</button></a>
+  <a href="contact.html"><button>Book video Session</button></a>
 </div></div>
 <script src="js/script.js"></script>
 <p style="font-size: 25px; text-align: center; justify-content: center;" class="mt-4 ">OR</p>
