--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 
   <nav class="navbar">
-      <div class="logos okk"><img class="nextt  ok" src="images/mes blue.png" alt="Logo"></div>
+    <a href="index.html"><div class="logos okk"><img class="nextt  ok" src="images/mes blue.png" alt="Logo"></div></a> 
       <input type="checkbox" id="click">
       <label for="click" class="menu-btn">
         <i  class="fa fa-bars"></i>
@@ -155,8 +155,117 @@
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
       </ul>
     </nav>
+
+   
+  <section>
+    <div id='show_bg_2'>
+      <div class="content">
+        <h1 class="head-img">Realise your higher education dreams with whatisnext</h1>
+        <p>whatisnext.in is India’s leading educational consultancy group. We have helped hundreds of students to pursue dream career paths. We also partnered with top institutions to give futuristic courses to the young minds.</p>
+        <button class="btn">FOR ADMISSION!</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <span class='Caret-Right fontawesomeicon' style="font-weight: 700;">&nbsp; All COURSES</span>
+
+      </div>
+     
+
+    </div>
+    <style>
+ 
+      .fontawesomeicon::before {
+    display: inline-block;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+ }
+
+.Caret-Right::before {
+   font: var(--fa-font-solid);
+    content: ' \f0da';
+ }
+      #show_bg_2 {
+    background-image:
+    linear-gradient(to bottom, rgba(38, 98, 142, 0.52), rgba(27, 43, 123, 0.73)),
+    url('images/dom-fou-YRMWVcdyhmI-unsplash\ \(1\).jpg');
+    width: 100%;
+    height: 700px;
+    background-size: cover;
+    color: white;
+    padding: 20px;
+    border-radius: 0px 0px 95px 0px;
+}
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+ 
+  border-radius: 35px;
+  background-color:#fb2323;
+  color: #f9f9f9;
+  font-size: 13px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.btn:hover {
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.content {
+  position: absolute;
+  width: 50%;
+  top: 50%;
+  left: 5%;
+  transform: translateY(-50%);
+  text-align: left;
+  color: #fff;
+}
+.content h1 {
+  font-size: 50px;
+  padding: 0px;
+  font-family: 'Poppins',sans-serif;
+  font-weight: 600;
+  margin-bottom: 20px;
+  color: white;
+}
+.content p{
+  font-size: 20px;
+  text-align: justify;
+  font-family: 'Poppins',sans-serif;
+}
+@media (max-width: 767px) {
+  .content {
+  position: absolute;
+  width: 80%;
+  top: 50%;
+  left: 5%;
+  transform: translateY(-50%);
+  text-align: left;
+  color: #fff;
+}
+          .content h1 {
+            
+  font-size: 30px;
+  padding: 0px;
+  font-family: 'Poppins',sans-serif;
+  font-weight: 600;
+  margin-bottom: 20px;
+  color: white;
+}
+.content p{
+  font-size: 10px;
+  text-align: justify;
+  font-family: 'Poppins',sans-serif;
+}
+#show_bg_2 {
+  border-radius: 0px 0px 75px 0px;
+    width: 100%;
+    height: 600px;
+   
+}
+  }
   
-<section class="hero-wrap" style="background-image: url('images/confuse.jpg'); ">
+    </style>
+  </section>
+<!-- <section class="hero-wrap" style="background-image: url('images/confuse.jpg'); ">
 <div class="overlay"></div>
 <div class="container">
 <div class="row no-gutters slider-text align-items-center">
@@ -217,7 +326,7 @@ typewriter();
 </div>
 </div>
 </div>
-</section>
+</section> -->
 
 <section class="ftco-section ftco-no-pt ftco-no-pb">
 <div class="container-xl">
