--- a/team.html
+++ b/team.html
@@ -74,7 +74,7 @@
     </style>
 
  <nav class="navbar">
-      <div class="logos okk"><img class="nextt  ok" src="images/mes blue.png" alt="Logo"></div>
+  <a href="index.html"><div class="logos okk"><img class="nextt  ok" src="images/mes blue.png" alt="Logo"></div></a> 
       <input type="checkbox" id="click">
       <label for="click" class="menu-btn">
         <i  class="fa fa-bars"></i>
