--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
       <div class="content">
         <h1 class="head-img">Realise your higher education dreams with whatisnext</h1>
         <p>whatisnext.in is India’s leading educational consultancy group. We have helped hundreds of students to pursue dream career paths. We also partnered with top institutions to give futuristic courses to the young minds.</p>
-        <button class="btn">FOR ADMISSION!</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <span class='Caret-Right fontawesomeicon' style="font-weight: 700;">&nbsp; All COURSES</span>
+        <button class="btn">FOR ADMISSION!</button>
+        <span class='Caret-Right fontawesomeicon' style="font-weight: 500;">&nbsp; All COURSES</span>
 
       </div>
      
@@ -195,7 +195,7 @@
 .btn {
   display: inline-block;
   padding: 10px 20px;
- 
+ margin-right: 20px;
   border-radius: 35px;
   background-color:#fb2323;
   color: #f9f9f9;
@@ -251,7 +251,7 @@
   color: white;
 }
 .content p{
-  font-size: 10px;
+  font-size: 13px;
   text-align: justify;
   font-family: 'Poppins',sans-serif;
 }
