--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 @media (max-width: 767px) {
   .content {
   position: absolute;
-  width: 80%;
+  width: 90%;
   top: 50%;
   left: 5%;
   transform: translateY(-50%);
@@ -258,8 +258,12 @@
 #show_bg_2 {
   border-radius: 0px 0px 75px 0px;
     width: 100%;
-    height: 600px;
+    height: 700px;
    
+}
+.btn {
+ margin-right: 10px;
+  
 }
   }
   
