--- a/index.html
+++ b/index.html
@@ -230,11 +230,12 @@
   font-size: 20px;
   text-align: justify;
   font-family: 'Poppins',sans-serif;
+  margin-bottom: 40px;
 }
 @media (max-width: 767px) {
   .content {
   position: absolute;
-  width: 90%;
+  width: 80%;
   top: 50%;
   left: 5%;
   transform: translateY(-50%);
@@ -251,14 +252,14 @@
   color: white;
 }
 .content p{
-  font-size: 13px;
+  font-size: 15px;
   text-align: justify;
   font-family: 'Poppins',sans-serif;
 }
 #show_bg_2 {
   border-radius: 0px 0px 75px 0px;
     width: 100%;
-    height: 700px;
+    height: 650px;
    
 }
 .btn {
