--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
 }
 
 .content {
+  margin-top: 70px;
   position: absolute;
   width: 50%;
   top: 50%;
@@ -234,6 +235,7 @@
 }
 @media (max-width: 767px) {
   .content {
+    margin-top: 50px;
   position: absolute;
   width: 80%;
   top: 50%;
