--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
 
   position: absolute;
   width: 50%;
-  top: 12%;
+  top: 10%;
   left: 5%;
   transform: translateY(-50%);
   text-align: left;
@@ -142,14 +142,9 @@
 }
 @media (max-width: 767px) {
   .content-cont {
-    margin-top: 50px;
-  position: absolute;
-  width: 80%;
-  top: 6%;
-  left: 5%;
-  transform: translateY(-50%);
-  text-align: left;
-  color: #fff;
+width: 80%;
+top: 7%;
+
 }
           .content h1 {
             
@@ -295,7 +290,7 @@ body:before {
   top: 0;
   left: 0;
   right: 0;
-  background: #8bbabb; }
+  background: #ffffff; }
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
