--- a/about.html
+++ b/about.html
@@ -7,3 +7,4 @@
   background-image: linear-gradient(to bottom, #9393f4, #c3bfff);
   opacity: 0.8;
 }
+background: radial-gradient(circle at 1.8% 4.8%, rgb(17, 23, 58) 0%, rgb(58, 85, 148) 90%);;
