--- a/index.html
+++ b/index.html
@@ -388,38 +388,50 @@ typewriter();
 </section>
 
  
- <!-- <style>
+ <style>
   .Vission{
     margin-top: 40px;
+  }
+  #mission-para{
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 500;
+   
+    padding: 20px;
+    color: white;
   }
   @media (max-width: 767.98px) {
   .Vission {
     margin-top: 0px;
   }
   }
-  .mission-para{
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: 500;
-    font-size: 45px;
+  #mission-para{
+    
+    font-size: 18px;
+    color: white;
   }
-</style> -->
-<section class="ftco-section" >
-  <div class="container " style="background-image: url('images/w2.jpg'); padding-left: 3%; padding-right: 3%; text-align: justify;">
+</style>
+<section style="margin-top: 20px; margin-bottom: 50px;">
+  <div class="container " style="background-image:
+  linear-gradient(to bottom, rgba(38, 98, 142, 0.52), rgba(27, 43, 123, 0.73)),
+  url('images/strategic-marketing-business-competitive-advantage-concept_556904-2687.jpg'); padding-left: 3%; padding-right: 3%; text-align: justify;">
 <div class="row">
   <div class="col-md-6 mt-5">
     <div class="row justify-content-center">
       <div class="col-md-7 text-center heading-section" data-aos="fade-up" data-aos-duration="1000">
-      <h2 class="mb-5">Our Mission <hr></h2>
+      <h2 class="mb-5" style="color: #ffff00;">Our Mission </h2>
       </div>
       </div>
    
-    <p id="mission-para"> India is a knowledge economy, one that creates, disseminates, and uses knowledge to enhance its growth and development. The Team of Whatisnext believe that knowledge can empower the youth into a national asset by providing proper education and guidance.</p>
+    <p id="mission-para" > India is a knowledge economy, one that creates, disseminates, and uses knowledge to enhance its growth and development. The Team of Whatisnext believe that knowledge can empower the youth into a national asset by providing proper education and guidance.</p>
   </div>
  
   <div class="col-md-6 mt-5 mb-5 " >
       <div  data-aos="fade-up">
-        <center><h2 class="mission-para" data-aos="fade-up" >Vission</h2><hr></center></div>
-   <br>
+        <div class="row justify-content-center">
+          <div class="col-md-7 text-center heading-section" data-aos="fade-up" data-aos-duration="1000">
+          <h2 class="mb-5" style="color: #ffff00;">Our Vission </h2>
+          </div>
+          </div>
     <p id="mission-para" >At Whatisnext.in, we are passionate about education and believe that it is the key to unlocking a world of opportunities. We are dedicated to helping our clients succeed and reach their full potential.</p>
   </div>
 </div>
@@ -429,17 +441,6 @@ typewriter();
 
 
  <style>
- li{
-  list-style-type: none
-}
-
-hr{
-  border: none;
-  border-top: 3px solid #3a3280;
-  width: 160px;
-  margin: 0;
-  
-}
 
 .choose-text{
   padding-left: 150px;
@@ -1426,16 +1427,17 @@ color: #777;
 <div class="block-23 mb-3">
 <ul>
 <li><a href="https://g.co/kgs/kQBsSD"><span class="icon fa fa-map marker"></span><span class="text">Whatisnext. in Edu Website ( Office ) 2nd floor, 706, 2nd Cross Rd, HRBR Layout 1st Block, Subbaiahnapalya, Banaswadi, Bengaluru, Karnataka 560043</span></a></li>
-<li><a href="tel:9061296874"><span class="icon fa fa-phone"></span><span class="text">+91 90194 17635 ( Kerala ) <br> +91 9061296874 ( Bangalore )
+<li><a href="tel:+91 90194 17635"><span class="icon fa fa-phone"></span>Head office : <span class="text">&nbsp; +91 90194 17635 </a> </li>
+<li><a href="tel:9061296874"><span class="icon fa fa-mobile"></span><span class="text">+91 90194 17635 ( Kerala ) 
    </span></a></li>
-   
+  <li><a href="tel:+91 9061296874"><span class="icon fa fa-mobile"></span><span class="text">+91 9061296874 ( Bangalore ) </a></span></li> 
 <li> <a href="mailto:info@whatisnext.in" ><span class="icon fa fa-paper-plane"></span><span class="text">info@whatisnext.in </span></a></li>
 </ul>
 </div>
 </div>
 </div>
 <div class="col-md-12 text-center">
-  <p class="mb-0 mt-0" id="copy-right" >&copy;2023 whatisnextin. All Rights Reserved </p>
+  <p class="mb-0 mt-0" id="copy-right" >copyright &copy; 2023 All rights reserved by whatisnextin | <b>Powered by WIN  Digital</b> </p>
   </div>
 </div>
 </div>
