--- a/index.html
+++ b/index.html
@@ -58,67 +58,7 @@
 	margin-top:16px;
 }
 
-    /* .img {
-  vertical-align: middle;
-  border-style: none; }
-.ftco-about {
-  position: relative;
-  z-index: 0; }
-  .ftco-about .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    content: '';
-    opacity: .1;
-    background: #000000;
-    z-index: -1; }
-  .ftco-about .about-wrap {
-    position: relative;
-    width: 100%; }
-    @media (max-width: 767.98px) {
-      .ftco-about .about-wrap {
-        height: 100px; } }
-  .ftco-about .img {
-    -webkit-box-shadow: 0px 2px 25px -13px rgba(0, 0, 0, 0.26);
-    -moz-box-shadow: 0px 2px 25px -13px rgba(0, 0, 0, 0.26);
-    box-shadow: 0px 2px 25px -13px rgba(0, 0, 0, 0.26);
-    border: 15px solid #fff;
-    width: 70%;
-    height: 80%;
-    position: absolute;
-    top: 0;
-    left: 0; }
-    @media (max-width: 767.98px) {
-      .ftco-about .img {
-        height: 400px; } }
-  .ftco-about .img-2 {
-    -webkit-box-shadow: 0px 2px 25px -13px rgba(0, 0, 0, 0.26);
-    -moz-box-shadow: 0px 2px 25px -13px rgba(0, 0, 0, 0.26);
-    box-shadow: 0px 2px 25px -13px rgba(0, 0, 0, 0.26);
-    border: 15px solid #fff;
-    width: 60%;
-    height: 65%;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center; }
-  .ftco-about .about-intro {
-    width: 100%;
-    position: relative;
-    z-index: 99; }
-    .ftco-section {
-  padding: 7em 0;
-  position: relative;
-  width: 100%; }
-  @media (max-width: 767.98px) {
-    .ftco-section {
-      padding: 6em 0; } } */
-
-
+  
 #loadMore {
   width: 200px;
   color: #fff;
@@ -272,68 +212,7 @@
   
     </style>
   </section>
-<!-- <section class="hero-wrap" style="background-image: url('images/confuse.jpg'); ">
-<div class="overlay"></div>
-<div class="container">
-<div class="row no-gutters slider-text align-items-center">
-<div class="col-lg-5">
-<div class="text " data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
-<span class="subheading">MUST KNOW BEFORE CHOOSE</span>
-<h1 id="typedtext"> Are You Confused About Future?<br>
-  We Can Help You!</h1>
- 
-  <script>
 
-    // set up text to print, each item in array is new line
-var aText = new Array(
-"Are You Confused About Future ?", 
-"We Can Help You!"
-);
-var iSpeed = 100; // time delay of print out
-var iIndex = 0; // start printing array at this posision
-var iArrLength = aText[0].length; // the length of the text array
-var iScrollAt = 20; // start scrolling up at this many lines
- 
-var iTextPos = 0; // initialise text position
-var sContents = ''; // initialise contents variable
-var iRow; // initialise current row
- 
-function typewriter()
-{
- sContents =  ' ';
- iRow = Math.max(0, iIndex-iScrollAt);
- var destination = document.getElementById("typedtext");
- 
- while ( iRow < iIndex ) {
-  sContents += aText[iRow++] + '<br />';
- }
- destination.innerHTML = sContents + aText[iIndex].substring(0, iTextPos) + "_";
- if ( iTextPos++ == iArrLength ) {
-  iTextPos = 0;
-  iIndex++;
-  if ( iIndex != aText.length ) {
-   iArrLength = aText[iIndex].length;
-   setTimeout("typewriter()", 500);
-  }
- } else {
-  setTimeout("typewriter()", iSpeed);
- }
-}
-
-
-typewriter();
-  </script>
-  
-    
-<p class="mb-4 sub-thin-heading">Looking For Best University And Less Fees?</p>
-<p><a href="/contact" class="btn btn-primary p-4 py-3" >We are here to help You 
-    <span class="ion-ios-arrow-round-forward"></span></a>
-     <a href="#" class="btn btn-white p-4 py-3"  onclick="window.open('images/MES.pdf')">view course<span class="ion-ios-arrow-round-forward"></span></a></p>
-</div>
-</div>
-</div>
-</div>
-</section> -->
 
 <section class="ftco-section ftco-no-pt ftco-no-pb">
 <div class="container-xl">
@@ -455,7 +334,7 @@ typewriter();
 } }
  </style>
 
-
+<div class="container">
 <div class="row justify-content-center">
   <div class="col-md-8 heading-section text-center mb-3" data-aos="fade-up" data-aos-duration="1000">
    
@@ -680,6 +559,7 @@ typewriter();
     </div>
     
   </section>
+</div>
   <button id="load-more-btn">Load More</button>
   <style>
 
@@ -719,7 +599,7 @@ font-weight: 550;
 }
 
 .feature h2 {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
   margin-bottom: 10px;
   color: #f6ff00 !important;
@@ -757,12 +637,12 @@ font-weight: 550;
     font-weight: 300;
   }
   .feature p {
-  font-size: 13px;
+  font-size: 12px;
  
   color: #ffffff;
 }
 .feature h2 {
-  font-size: 10px;
+  font-size: 18px;
   font-weight: bold;
   margin-bottom: 10px;
   color: #000000;
@@ -1428,16 +1308,16 @@ color: #777;
 <ul>
 <li><a href="https://g.co/kgs/kQBsSD"><span class="icon fa fa-map marker"></span><span class="text">Whatisnext. in Edu Website ( Office ) 2nd floor, 706, 2nd Cross Rd, HRBR Layout 1st Block, Subbaiahnapalya, Banaswadi, Bengaluru, Karnataka 560043</span></a></li>
 <li><a href="tel:+91 90194 17635"><span class="icon fa fa-phone"></span>Head office : <span class="text">&nbsp; +91 90194 17635 </a> </li>
-<li><a href="tel:9061296874"><span class="icon fa fa-mobile"></span><span class="text">+91 90194 17635 ( Kerala ) 
+<li><a href="tel:+91 93533 12839"><span class="icon fa fa-mobile"></span><span class="text">+91 93533 12839
    </span></a></li>
-  <li><a href="tel:+91 9061296874"><span class="icon fa fa-mobile"></span><span class="text">+91 9061296874 ( Bangalore ) </a></span></li> 
+  <li><a href="tel:+91 9061296874"><span class="icon fa fa-mobile"></span><span class="text">+91 9061296874 </a></span></li> 
 <li> <a href="mailto:info@whatisnext.in" ><span class="icon fa fa-paper-plane"></span><span class="text">info@whatisnext.in </span></a></li>
 </ul>
 </div>
 </div>
 </div>
 <div class="col-md-12 text-center">
-  <p class="mb-0 mt-0" id="copy-right" >copyright &copy; 2023 All rights reserved by whatisnextin | <b>Powered by WIN  Digital</b> </p>
+  <p class="mb-0 mt-0" id="copy-right" >&copy; 2023 All rights reserved by whatisnextin | <b>Powered by WIN  Digital</b> </p>
   </div>
 </div>
 </div>
