--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 <section style="margin-top: 20px; margin-bottom: 50px;">
   <div class="container " style="background-image:
   linear-gradient(to bottom, rgba(38, 98, 142, 0.52), rgba(27, 43, 123, 0.73)),
-  url('images/strategic-marketing-business-competitive-advantage-concept_556904-2687.jpg'); padding-left: 3%; padding-right: 3%; text-align: justify;">
+  url('images/vission.jpg'); padding-left: 3%; padding-right: 3%; text-align: justify;">
 <div class="row">
   <div class="col-md-6 mt-5">
     <div class="row justify-content-center">
