--- a/courses.html
+++ b/courses.html
@@ -59,48 +59,7 @@
 	margin-top:16px;
 }
 </style>
-<!-- <div class="top-wrap">
-<div class="container">
-<div class="row">
-<div class="col-md col-xl-5 d-flex align-items-center ">
-<a class="navbar-brand align-items-center mb-5" href="index.html">
-  
-  <section class="logos okk">
-    <img src="images/mes blue.png" class="nextt  ok">
-</section>
-</a>
-</div>
-<div class="col-md d-flex align-items-center">
-<div class="con d-flex ">
-<div class="icon mb-5 "><span class="flaticon-clock"></span></div>
-<div class="text  ">
-<span>Monday - Friday</span>
-<strong>8:00AM-8:00PM</strong>
-</div>
-</div>
-</div>
-<div class="col-md d-flex align-items-center">
-<div class="con d-flex">
-<div class="icon mb-5 "><span class="flaticon-telephone"></span></div>
-<div class="text">
-<span>Call Us</span>
-<strong>+2 392 3929 210</strong>
-</div>
-</div>
-</div>
-<div class="col-md d-flex justify-content-end align-items-center">
-<div class="social-media ">
-<p class="mb-5 d-flex">
-<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
-<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
-<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
-<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a>
-</p>
-</div>
-</div>
-</div>
-</div>
-</div> -->
+
   <nav class="navbar">
     <a href="index.html"><div class="logos okk"><img class="nextt  ok" src="images/mes blue.png" alt="Logo"></div></a> 
       <input type="checkbox" id="click">
@@ -145,8 +104,8 @@
 .content-course {
 
   position: absolute;
-  width: 70%;
-  top: 40%;
+  width: 80%;
+ margin-top: 60%;
   left: 5%;
   transform: translateY(-50%);
   text-align: left;
