--- a/courses.html
+++ b/courses.html
@@ -105,7 +105,7 @@
 
   position: absolute;
   width: 80%;
- margin-top: 60%;
+ margin-top: 230px;
   left: 5%;
   transform: translateY(-50%);
   text-align: left;
