--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
 }
 
 .content {
-  margin-top: 70px;
+    margin-top: 350px;
   position: absolute;
-  width: 50%;
-  top: 50%;
+  width: 80%;
+ 
   left: 5%;
   transform: translateY(-50%);
   text-align: left;
@@ -174,16 +174,7 @@
   margin-bottom: 40px;
 }
 @media (max-width: 767px) {
-  .content {
-    margin-top: 50px;
-  position: absolute;
-  width: 80%;
-  top: 50%;
-  left: 5%;
-  transform: translateY(-50%);
-  text-align: left;
-  color: #fff;
-}
+  
           .content h1 {
             
   font-size: 30px;
@@ -301,7 +292,7 @@
       </div>
       </div>
    
-    <p id="mission-para" > India is a knowledge economy, one that creates, disseminates, and uses knowledge to enhance its growth and development. The Team of Whatisnext believe that knowledge can empower the youth into a national asset by providing proper education and guidance.</p>
+    <p id="mission-para" > To simplify the college search process and help students find the right course and college for their higher studies in India.</p>
   </div>
  
   <div class="col-md-6 mt-5 mb-5 " >
@@ -311,7 +302,7 @@
           <h2 class="mb-5" style="color: #ffff00;">Our Vission </h2>
           </div>
           </div>
-    <p id="mission-para" >At Whatisnext.in, we are passionate about education and believe that it is the key to unlocking a world of opportunities. We are dedicated to helping our clients succeed and reach their full potential.</p>
+    <p id="mission-para" >To become the leading platform for students seeking guidance and information on higher education in India, by creating a community where students can connect with their peers, mentors, and college representatives to achieve their academic and career aspirations.</p>
   </div>
 </div>
 </div>
