--- a/application-form.html
+++ b/application-form.html
@@ -894,7 +894,7 @@
 
   position: absolute;
   width: 80%;
-  top: 40%;
+ margin-top: 200px;
   left: 5%;
   transform: translateY(-50%);
   text-align: left;
