--- a/team.html
+++ b/team.html
@@ -108,7 +108,7 @@
 
   position: absolute;
   width: 80%;
-  top: 40%;
+  margin-top: 200px;
   left: 5%;
   transform: translateY(-50%);
   text-align: left;
