--- a/team.html
+++ b/team.html
@@ -837,7 +837,7 @@ fgaththghhadtj
       
       }
       </style>
-        <center><h2 >Join Our Community <i class="fa fa-arrow-up-right-from-square"></i></h2> </center>
+        <center><h2 >Join Our Community <a href="contact.html"></a><i class="fa fa-arrow-up-right-from-square"></i></h2></a> </center>
       </div>
       <div class="col-md-5 border-left d-flex align-items-center">
        
