--- a/team.html
+++ b/team.html
@@ -565,9 +565,7 @@ box-shadow: 10px 10px 11px 1px rgba(0,0,0,1);
               <div class="text">
                 <h3>AROMAL RAJESH</h3>
                 <span id="sub-heading" class="position" sty>Marketing Director</span>
-                <p style="text-align: justify;  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Experience specifically in the Educational sector, develop an
-overall plan to promote company and reviewing applications
-and making selections for scholarship programs at Universities,with experience advising for career counseling</p>
+                <p style="text-align: justify;  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">He develop an overall plan to promote company and reviewing applications and making selections for scholarship programs . He is committed to helping students achieve their academic and career goals, with experience advising for career counseling</p>
               </div>
             </div>
           </div>
