--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 <div class="col-md-6 heading-section d-flex align-items-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
 <div class="mt-0 my-lg-5 py-5">
 <span class="subheading">Learn Anything</span>
-<h2 class="mb-2">DISCOVER THE BEST SERVICES FOR YOU.</h2>
+<h2 class="mb-2" style="color: #042569;">DISCOVER THE BEST SERVICES FOR YOU.</h2>
 <div class="row mt-4 g-lg-2">
 <div class="col-lg-12 d-flex align-items-stretch services-wrap">
 <div class="services d-flex">
@@ -625,16 +625,16 @@ font-weight: 550;
   header h1 {
     font-size: 35px;
     
-    font-weight: 300;
+    font-weight: 550;
   }
   .feature p {
-  font-size: 12px;
+  font-size: 9px;
  
   color: #ffffff;
 }
 .feature h2 {
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 20px;
+  font-weight: 600;
   margin-bottom: 10px;
   color: #000000;
 }
