--- a/team.html
+++ b/team.html
@@ -641,8 +641,7 @@ his passion for marketing.
               <div class="text">
                 <h3>Anwar sadath</h3>
                 <span id="sub-heading" class="position">Developer</span>
-                          <p style="text-align: justify; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Experience specifically in the Educational sector, develop an
-fgaththghhadtj
+                          <p style="text-align: justify; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Self-taught MERN stack developer with a Bachelor's degree in Computer Applications (BCA). With a passion for coding and a dedication to continuous learning, I have honed my skills in developing web applications using the MERN stack, and am excited to bring my expertise to new projects and challenges.
 </p>
               </div>
             </div>
