--- a/team.html
+++ b/team.html
@@ -834,7 +834,7 @@ his passion for marketing.
       
       }
       </style>
-        <center><h2 >Join Our Community <a href="contact.html"></a><i class="fa fa-arrow-up-right-from-square"></i></h2></a> </center>
+        <center><h2 >Join us on this journey and find what's next for you! <a href="contact.html"></a><i class="fa fa-arrow-up-right-from-square"></i></h2></a> </center>
       </div>
       <div class="col-md-5 border-left d-flex align-items-center">
        
