--- a/index.html
+++ b/index.html
@@ -332,9 +332,7 @@
   <h2 class="">Why Choose us?</h2>
   </div>
   
-  </div><p  class="choose-text">There are so many options! We ensure that our students and parents are aware of all the
-    options that come under their interest. By this way, they'll be able to choose the best one for
-    them.
+  </div><p  class="choose-text">There are so many options ! we’re here to help , <b>#learnwithwin</b> is designed to provide you with the support and guidance you need to take next step in your journey, <b>as a big brother whatisnext .in</b>  is always with you.
     </p>
   <section  class="features">
     
