--- a/team.html
+++ b/team.html
@@ -204,11 +204,7 @@
     <div id="teams-para" class="col-md-6 order-md-2 ml-5" style="text-align: justify; margin-left: 0px; padding-left: 5%; padding-right: 5%;margin-top: 80px;">
       <h2 class="name">Mohammed Sajjad A K</h2>
        <h6 class="name">Founder & MD</h6>
-      <p style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">With over 8
-                years of experience in education as a Career Counsellor, Sajjad
-                has won the Award for "Young Entrepreneur of the year 2020" in
-                the Education Sector from Genius Education Service, Dubai, UAE
-                in a convocation program held in Burj Khalif-a</p>
+      <p style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">He gained the respect for his commitments with over 9 years of experience in the education industry as a best mentor for the students who seeks higher education. And has been recognised and celebrated widely. In 2020, he was awarded the "Young Entrepreneur of the Year" in the Education Sector by Genius Education Service, Dubai at a Convocation Program held jn Burj Khalifa.</p>
     <div class="social-icons">
       <a href="mailto:info@whatisnext.in"><i class="fa fa-google"></i></a>
   <a href="https://www.linkedin.com/in/mohammed-sajjad-ak-7014b9121
@@ -639,7 +635,7 @@ his passion for marketing.
                 
               </div>
               <div class="text">
-                <h3>Anwar sadath</h3>
+                <h3>ANWAR SADATH</h3>
                 <span id="sub-heading" class="position">Developer</span>
                           <p style="text-align: justify; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Self-taught MERN stack developer with a Bachelor's degree in Computer Applications (BCA). With a passion for coding and a dedication to continuous learning, I have honed my skills in developing web applications using the MERN stack, and am excited to bring my expertise to new projects and challenges.
 </p>
