--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 <div class="col-md-6 heading-section d-flex align-items-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
 <div class="mt-0 my-lg-5 py-5">
 <span class="subheading">Learn Anything</span>
-<h2 class="mb-2" style="color: #042569;"> DISCOVER THE BEST SERVICES FOR YOU.</h2>
+<span><h2 style="color: #042569;">DISCOVER<h2 class="" >   THE BEST SERVICES FOR YOU.</h2></h2></span>
 <div class="row mt-4 g-lg-2">
 <div class="col-lg-12 d-flex align-items-stretch services-wrap">
 <div class="services d-flex">
@@ -299,7 +299,7 @@
       <div  data-aos="fade-up">
         <div class="row justify-content-center">
           <div class="col-md-7 text-center heading-section" data-aos="fade-up" data-aos-duration="1000">
-          <h2 class="mb-5" style="color: #ffff00;">Our Vission </h2>
+          <h2 class="mb-5" style="color: #ffff00;">Our Vision </h2>
           </div>
           </div>
     <p id="mission-para" >To become the leading platform for students seeking guidance and information on higher education in India, by creating a community where students can connect with their peers, mentors, and college representatives to achieve their academic and career aspirations.</p>
@@ -332,7 +332,7 @@
   <h2 class="">Why Choose us?</h2>
   </div>
   
-  </div><p  class="choose-text">There are so many options ! we’re here to help , <b>#learnwithwin</b> is designed to provide you with the support and guidance you need to take next step in your journey, <b>as a big brother whatisnext .in</b>  is always with you.
+  </div><p  class="choose-text">There are so many options ! <b>#learnwithwin</b> is designed to provide you with the support and guidance you need to take next step in your journey, <b>as a big brother whatisnext .in</b>  is always with you.
     </p>
   <section  class="features">
     
