--- a/team.html
+++ b/team.html
@@ -214,7 +214,7 @@
     </div>
     
     <div class="col-md-6 order-md-1">
-      <img src="images/sejja.jpg" alt="team member image" class="img-fluid">
+      <img src="images/WhatsApp Image 2023-04-19 at 1.13.39 AM.jpeg" alt="team member image" class="img-fluid">
     </div>
     
   </div>
