--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@
 <div class="col-md-6 heading-section d-flex align-items-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
 <div class="mt-0 my-lg-5 py-5">
 <span class="subheading">Learn Anything</span>
-<span><h2 style="color: #042569;">DISCOVER<h2 class="" >   THE BEST SERVICES FOR YOU.</h2></h2></span>
+<span><h2 style="color: #042569;">DISCOVER<h2 class="">THE BEST SERVICES FOR YOU.</h2></h2></span>
+<span style="color: brown">fox</span> jumps over... </p> .
 <div class="row mt-4 g-lg-2">
 <div class="col-lg-12 d-flex align-items-stretch services-wrap">
 <div class="services d-flex">
