--- a/team.html
+++ b/team.html
@@ -81,7 +81,8 @@
     <section>
       <div id='show_bg_2'>
         <div class="content-about">
-          <h1>About Us</h1>
+          <h1 class="text-center">About</h1>
+          <h2 style="font-family:'Times New Roman', Times, serif; font-weight: 850; color: #fff; font-size: 35px;" class="text-center">whatisnext.in</h2>
           <p>Welcome to <b>Whatisnext.in</b>,a subsidiary of (Master Educational Solutions).MES is an
             Educational consultancy offering career counseling and admissions guidance services all
             over India since 2013. we believe that to sustain in any business, There is a need for
@@ -106,7 +107,7 @@
     linear-gradient(to bottom, rgba(38, 98, 142, 0.52), rgba(27, 43, 123, 0.73)),
     url('images/dom-fou-YRMWVcdyhmI-unsplash\ \(1\).jpg');
     width: 100%;
-    height: 500px;
+    height: 600px;
     background-size: cover;
     color: white;
     padding: 20px;
@@ -115,7 +116,7 @@
 .content-about {
 
   position: absolute;
-  width: 80%;
+  width: 90%;
   margin-top: 300px;
   left: 5%;
   transform: translateY(-50%);
@@ -124,11 +125,11 @@
 }
 .content-about h1 {
 
-  font-size: 40px;
+  font-size: 50px;
   padding: 0px;
   font-family: 'Poppins',sans-serif;
-  font-weight: 600;
-  margin-bottom: 20px;
+  font-weight: 700;
+  margin-bottom: 5px;
   color: white;
 }
 .content-about p{
@@ -140,15 +141,15 @@
 @media (max-width: 767px) {
   .content-about h1 {
             
-  font-size: 30px;
+  font-size: 35px;
   padding: 0px;
   font-family: 'Poppins',sans-serif;
   font-weight: 600;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
   color: white;
 }
 .content-about p{
-  font-size: 10px;
+  font-size: 12px;
  
   font-family:'Poppins',sans-serif;
 }
