--- a/team.html
+++ b/team.html
@@ -81,8 +81,8 @@
     <section>
       <div id='show_bg_2'>
         <div class="content-about">
-          <h1 class="text-center">About</h1>
-          <h2 style="font-family:'Times New Roman', Times, serif; font-weight: 850; color: #fff; font-size: 35px;" class="text-center">whatisnext.in</h2>
+          <h1 >About</h1>
+          <h2 style="font-family:'Times New Roman', Times, serif; font-weight: 750; color: #fff; font-size: 25px;" >whatisnext.in</h2>
           <p>Welcome to <b>Whatisnext.in</b>,a subsidiary of (Master Educational Solutions).MES is an
             Educational consultancy offering career counseling and admissions guidance services all
             over India since 2013. we believe that to sustain in any business, There is a need for
@@ -141,13 +141,13 @@
 @media (max-width: 767px) {
   .content-about h1 {
             
-  font-size: 35px;
-  padding: 0px;
-  font-family: 'Poppins',sans-serif;
-  font-weight: 600;
-  margin-bottom: 5px;
-  color: white;
-}
+            font-size: 30px;
+            padding: 0px;
+            font-family: 'Poppins',sans-serif;
+            font-weight: 600;
+            margin-bottom: 0px;
+            color: white;
+          }
 .content-about p{
   font-size: 12px;
  
@@ -205,7 +205,7 @@
       <div class="social-icons">
    <a href="mailto:info@whatisnext.in"><i class="fa fa-google"></i></a>
   <a href="https://www.linkedin.com/in/amalmoffical"><i class="fa fa-linkedin"></i></a>
-  <a href="https://mobile.twitter.com/AMALMURALI2K17"><i class="fa fa-twitter"></i></a>
+  <a href="https://mobile.twitter.com/amalmoffical"><i class="fa fa-twitter"></i></a>
 </div>
     </div>
   </div>
