--- a/application-form.html
+++ b/application-form.html
@@ -969,6 +969,7 @@
           background-color: #fffc31;
           color: #000000;
           font-size: 18px;
+          font-weight: 600;
           border: none;
           border-radius: 35px;
           cursor: pointer;
@@ -984,7 +985,8 @@
   <div class="container-book">
  <div class="card-book">
   <h1>Talk with a Mentor</h1>
-  <a href="contact.html"><button>Book video Session</button></a>
+  
+  <a href="https://calendly.com/whatisnextoffical/learn-with-whatisnext-in"><button>Book Video Session</button></a>
 </div></div>
 <script src="js/script.js"></script>
 <p style="font-size: 25px; text-align: center; justify-content: center;" class="mt-4 ">OR</p>
