--- a/team.html
+++ b/team.html
@@ -213,7 +213,7 @@
     <div id="teams-para" class="col-md-6 order-md-2 ml-5" style="text-align: justify; margin-left: 0px; padding-left: 5%; padding-right: 5%;margin-top: 80px;">
       <h2 class="name">Mohammed Sajjad A K</h2>
        <h6 class="name">Founder & MD</h6>
-      <p style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">He gained the respect for his commitments with over 9 years of experience in the education industry as a best mentor for the students who seeks higher education. And has been recognised and celebrated widely. In 2020, he was awarded the "Young Entrepreneur of the Year" in the Education Sector by Genius Education Service, Dubai at a Convocation Program held jn Burj Khalifa.</p>
+      <p style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">He gained the respect for his commitments with over 9 years of experience in the education industry as a best mentor for the students who seeks higher education. He has been recognised and celebrated widely by presenting a Award titled "Young Entrepreneur of the year 2020 in Education Sector" by Genius Education Service, Dubai. At a Convocation Program held in Burj Khalifa, Dubai.</p>
     <div class="social-icons">
       <a href="mailto:info@whatisnext.in"><i class="fa fa-google"></i></a>
   <a href="https://www.linkedin.com/in/mohammed-sajjad-ak-7014b9121
