--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
 </div>
 <div class="col-md-6 heading-section d-flex align-items-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
 <div class="mt-0 my-lg-5 py-5">
-<span class="subheading">Learn Anything</span>
+<span class="subheading" style="color: #18009f;">Learn Anything</span>
 <!-- <span><h2 style="color: #042569;">DISCOVER<h2 class="">THE BEST SERVICES FOR YOU.</h2></h2></span> -->
-<h2><span style="color: #0b3891;">DISCOVER&nbsp;</span>THE BEST SERVICES<span style="color: #cb0606;"> FOR</span> YOU.</h2>
+<h2>DISCOVER THE BEST SERVICES<span style="color: #cb0606;"> FOR</span> YOU.</h2>
 <div class="row mt-4 g-lg-2">
 <div class="col-lg-12 d-flex align-items-stretch services-wrap">
 <div class="services d-flex">
@@ -283,7 +283,7 @@
 </style>
 <section style="margin-top: 20px; margin-bottom: 50px;">
   <div class="container " style="background-image:
-  linear-gradient(to bottom, rgba(38, 98, 142, 0.52), rgba(27, 43, 123, 0.73)),
+  linear-gradient(to bottom, rgba(0, 15, 69, 0.52), rgba(0, 15, 91, 0.73)),
   url('images/vission.jpg'); padding-left: 3%; padding-right: 3%; text-align: justify;">
 <div class="row">
   <div class="col-md-6 mt-5">
@@ -655,7 +655,7 @@ font-weight: 550;
   width: 300px;
   margin: 10px;
   padding: 10px;
-  background: radial-gradient(circle at 1.8% 4.8%, rgb(17, 23, 58) 0%, rgb(58, 85, 148) 90%);;
+  background:linear-gradient(to bottom, rgba(0, 63, 108, 0.52), rgba(4, 25, 129, 0.73));
 }
 
 #load-more-btn {
@@ -926,24 +926,7 @@ color: #777;
   </div>
   </div>
   </div>
-  <div class="item">
-  <div class="testimony-wrap">
-  <div class="text">
-  <div class="d-flex align-items-center mb-4">
-  <div class="user-img" style="background-image: url(images/Vanitha.jpeg)">
-  <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></div>
-  </div>
-  <div class="ps-3 tx">
-  <p class="names">Vanitha Prabhakar</p>
-  <p class="positions">(Intern student)</p>
-  <p class="positions" style="color: rgb(51, 0, 170);">Bsc Cardiac care,RR institute of Medical sciences</p>
-  </div>
-  </div>
-  <p class="mb-4 msg">“ They are not like other consultants, they have direct contact with the college management so there will no issue. They helped me out throughout my admission process. They even guided  me reaching out  the correct location of college, so
-  U can blindly trust this educational consultancy. “</p>
-  </div>
-  </div>
-  </div>
+
   <div class="item">
   <div class="testimony-wrap">
   <div class="text">
@@ -1302,7 +1285,7 @@ color: #777;
 <li><a href="tel:+91 93533 12839"><span class="icon fa fa-mobile"></span><span class="text">+91 93533 12839
    </span></a></li>
   <li><a href="tel:+91 9061296874"><span class="icon fa fa-mobile"></span><span class="text">+91 9061296874 </a></span></li> 
-<li> <a href="mailto:info@whatisnext.in" ><span class="icon fa fa-paper-plane"></span><span class="text">info@whatisnext.in </span></a></li>
+<li> <a href="mailto:info@whatisnext.in" ><span class="icon fa fa-envelope"></span><span class="text">info@whatisnext.in </span></a></li>
 </ul>
 </div>
 </div>
