--- a/application-form.html
+++ b/application-form.html
@@ -1558,10 +1558,12 @@
       
       <p class="footer-quote" style="color: #d5d5d5;">Whatisnext.in mentors have shaped the future of 3000+ students and working professionals based on their skill, background and dream.</p>
       <ul class="ftco-footer-social list-unstyled mt-2">
-      <li><a href="https://www.linkedin.com/company/whatisnext-in/"><span class="fa fa-linkedin"></span></a></li>
-      <li><a href="https://www.facebook.com/profile.php?id=100066432039919&mibextid=LQQJ4d"><span class="fa fa-facebook"></span></a></li>
-      <li><a href="https://instagram.com/whatisnext.in?igshid=YmMyMTA2M2Y="><span class="fa fa-instagram"></span></a></li>
-      </ul>
+        <li><a href="https://www.linkedin.com/company/whatisnext-in/"><span class="fa fa-linkedin"></span></a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100066432039919&mibextid=LQQJ4d"><span class="fa fa-facebook"></span></a></li>
+        <li><a href="https://instagram.com/whatisnext.in?igshid=YmMyMTA2M2Y="><span class="fa fa-instagram"></span></a></li>
+        <li><a href="https://instagram.com/whatisnext.in?igshid=YmMyMTA2M2Y="><span class="fa fa-twitter"></span></a></li>
+        <li><a href=" https://www.youtube.com/@whatisnext.in"><span class="fa fa-youtube"></span></a></li>
+        </ul>
       </div>
       </div>
       <div class="col-md-6 col-lg-2">
