--- a/index.html
+++ b/index.html
@@ -1256,7 +1256,7 @@ color: #777;
 </ul>
 </div>
 </div>
-<div class="col-md-6 col-lg-2">
+<!-- <div class="col-md-6 col-lg-2">
 <div class="ftco-footer-widget mb-4">
 <h2 class="ftco-heading-2">Quick Links</h2>
 <ul class="list-unstyled">
@@ -1267,12 +1267,13 @@ color: #777;
 
 </ul>
 </div>
-</div>
+</div> -->
 <div class="col-md-6 col-lg-2">
 <div class="ftco-footer-widget mb-4">
 <h2 class="ftco-heading-2">Admissions</h2>
 <ul class="list-unstyled">
 <li><a href="#"><span class="ion ion-ios-arrow-round-forward me-2"></span>Download Brochure</a></li>
+<li><a href="application-form.html"><span class="ion ion-ios-arrow-round-forward me-2"></span>Regration Form</a></li>
 <li><a href="images/Whatisnext.in Application Form 23-24 (3).pdf" download><span class="ion ion-ios-arrow-round-forward me-2"></span>
   scholarship Form
 </a></li>
@@ -1290,15 +1291,19 @@ color: #777;
 <li><a href="https://g.co/kgs/kQBsSD"><span class="icon fa fa-map marker"></span><span class="text">Whatisnext. in Edu Website ( Office ) 2nd floor, 706, 2nd Cross Rd, HRBR Layout 1st Block, Subbaiahnapalya, Banaswadi, Bengaluru, Karnataka 560043</span></a></li>
 <li><a href="tel:+91 90194 17635"><span class="icon fa fa-phone"></span>Head office : <span class="text">&nbsp; +91 90194 17635 </a> </li>
 <li><a href="tel:+91 93533 12839"><span class="icon fa fa-mobile"></span><span class="text">+91 93533 12839
-   </span></a></li>
-  <li><a href="tel:+91 9061296874"><span class="icon fa fa-mobile"></span><span class="text">+91 9061296874 </a></span></li> 
+   </span></a><a href="tel:+91 9061296874">&emsp;&emsp;&ensp;&nbsp;<span class="text">+91 9061296874
+  </span></a></li>
 <li> <a href="mailto:info@whatisnext.in" ><span class="icon fa fa-envelope"></span><span class="text">info@whatisnext.in </span></a></li>
 </ul>
 </div>
 </div>
 </div>
+<hr>
 <div class="col-md-12 text-center">
-  <p class="mb-0 mt-0" id="copy-right" >&copy; 2023 All rights reserved by whatisnextin | <b>Powered by WIN  Digital</b> </p>
+  <div class="mb-3"> 
+    <a href="contact.html"><span id="copy-right">About Us &emsp;&emsp;</span></a><a href="courses.html"><span id="copy-right">&emsp;Courses&emsp;&emsp;</span></a><a href="application-form.html"><span id="copy-right">&emsp;&emsp;Register&emsp;&emsp;</span></a><a href="contact.html"><span id="copy-right">&emsp;Contact</span></a>
+</div>
+  <p class="mb-0 mt-0" id="copy-right" >Copyright © 2023 All rights reserved | <b>Powered by WIN  Digital</b> </p>
   </div>
 </div>
 </div>
