--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     <p id="mission-para" > To simplify the college search process and help students find the right course and college for their higher studies in India.</p>
   </div>
  
-  <div class="col-md-6 mt-5 mb-5 " >
+  <div class="col-md-6 mt-5 mb- " >
       <div  data-aos="fade-up">
         <div class="row justify-content-center">
           <div class="col-md-7 text-center heading-section" data-aos="fade-up" data-aos-duration="1000">
@@ -309,8 +309,9 @@
           </div>
           </div>
     <p id="mission-para" >To become the leading platform for students seeking guidance and information on higher education in India, by creating a community where students can connect with their peers, mentors, and college representatives to achieve their academic and career aspirations.</p>
+   
   </div>
-</div>
+</div><a href="about.html" class="text-center mb-5" style="color: #82e2ff;">About Us <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
 </div>
 
 </section>
@@ -1288,7 +1289,7 @@ color: #777;
 <h2 class="ftco-heading-2">Reach Us</h2>
 <div class="block-23 mb-">
 <ul>
-<li><a href="https://g.co/kgs/kQBsSD"><span class="icon fa fa-map marker"></span><span class="text">Whatisnext. in Edu Website ( Office ) 2nd floor, 706, 2nd Cross Rd, HRBR Layout 1st Block, Subbaiahnapalya, Banaswadi, Bengaluru, Karnataka 560043</span></a></li>
+<li><a href="https://maps.app.goo.gl/HByHCua1haoRW2dXA?g_st=iwb"><span class="icon fa fa-map marker"></span><span class="text">Whatisnext. in Edu Website ( Office ) 2nd floor, 706, 2nd Cross Rd, HRBR Layout 1st Block, Subbaiahnapalya, Banaswadi, Bengaluru, Karnataka 560043</span></a></li>
 <li><a href="tel:+91 90194 17635"><span class="icon fa fa-phone"></span>Head office : <span class="text">&nbsp; +91 90194 17635 </a> </li>
 <li><a href="tel:+91 93533 12839"><span class="icon fa fa-mobile"></span><span class="text">+91 93533 12839
    </span></a><a href="tel:+91 9061296874">&emsp;&emsp;&ensp;&nbsp;<span class="text">+91 9061296874
