--- a/application-form.html
+++ b/application-form.html
@@ -282,7 +282,7 @@
   }
   
   h2 {
-  font-size: 30px;
+  font-size: 70px;
   }
   
   h3 {
@@ -794,9 +794,9 @@
   }
   @media (max-width: 767px) {
     .title {
-  font-size: 15px;
+  font-size: 23px;
   text-transform: uppercase;
-  font-weight: 500;
+  font-weight: 550;
   text-align: center;
   color: #fff;
   }
@@ -966,7 +966,7 @@
           width: 100%;
           padding: 10px;
         
-          background-color: #fffc31;
+          background-color: #f3ee00;
           color: #000000;
           font-size: 18px;
           font-weight: 600;
@@ -994,7 +994,7 @@
     <div class="wrapper wrapper--w790">
         <div class="card card-5">
             <div class="card-heading">
-                <h2 class="title">REGISTRATION FORM 2023-24</h2>
+                <h2 class="title">REGISTRATION FORM</h2>
             </div>
             <div class="card-body">
                 <form id="submit-form">
@@ -1205,8 +1205,8 @@
                             </div>
                           </div>
                       </div>
-                      <div class="form-row  m-b-55">
-                        <div class="label"  for="name">Preffered Contact</div>
+                      <div class="form-row  m-b-55 mb-5">
+                        <div class="label mb-2"  for="name">Preffered Contact</div>
                         
                           <div class="custom-checkbox-group">
                             <div class="custom-checkbox">
