--- a/courses.html
+++ b/courses.html
@@ -152,7 +152,7 @@
   margin: 0 auto;
   padding: 10px 20px;
   font-size: 13px;
-  background-color: #ffff00;
+  background-color:  #f3ee00;
   color: #040404;
   border: none;
   border-radius: 5px;
