--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@ color: #777;
   margin: 0 auto;
   padding: 10px 20px;
   font-size: 13px;
-  background-color: #ffff00;
+  background-color: #f3ee00;
   color: #000000;
   border: none;
   border-radius: 5px;
