--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
   text-align: center;
   margin: 20px auto;
   padding: 10px;
+  margin-bottom: 20px;
   border-radius:10px;
   border: 1px solid transparent;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(20, 170, 224);
   transition: .3s;
 }
 #loadMore:hover {
@@ -668,7 +669,7 @@ font-weight: 550;
   display: block;
   margin: 10px auto;
   padding: 10px 20px;
-  background-color: #000000;
+  background-color: rgb(20, 170, 224);
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -749,7 +750,7 @@ loadMoreBtn.addEventListener('click', function() {
 </div>
 </section>
 
-<section class="ftco-section">
+<section class="ftco-section mb-5">
    
   <div class="row justify-content-center">
   <div class="col-md-8 heading-section text-center mb-5" data-aos="fade-up" data-aos-duration="1000">
@@ -1016,12 +1017,12 @@ color: #777;
   <div class="row justify-content-center">
     <div class="col-md-8 heading-section text-center mb-5" data-aos="fade-up" data-aos-duration="1000">
      
-    <h2 class="mb-4">Top Colleges & Universities</h2>
+    <h2 class="">Top Colleges & Universities</h2>
     </div>
     </div>
   
-    <div class="container mb-5">
-       <marquee  width="95%" direction="left" height="100px" scrollamount="10"> <div class="row g-5">
+    <div class="container">
+       <marquee  width="95%" direction="left" height="100px" scrollamount="10"> <div class="row">
           <div class="col col-6 col-sm-6 col-md-4 col-xl-4 col-xxl-4 col-lg-4"><div class="card-collage "><center><a href="#gal9"><img src="images/u1.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u2.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u3.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u4.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u5.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u6.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u7.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u8.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u9.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u10.jpg" alt="High Edu" class="collage-img"></a><a href="#gal9"><img src="images/u11.jpg" alt="High Edu" class="collage-img"></a></center></div></div>
  
             
