--- a/application-form.html
+++ b/application-form.html
@@ -985,7 +985,7 @@
  <div class="card-book">
   <h1>Talk with a Mentor</h1>
   
-  <a href="https://calendly.com/whatisnextoffical/learn-with-whatisnext-in"><button>Book Video Session</button></a>
+  <a href="reg2.html"><button>Book Video Session</button></a>
 </div></div>
 <script src="js/script.js"></script>
 <p style="font-size: 25px; text-align: center; justify-content: center;" class="mt-4 ">OR</p>
