--- a/reg2.html
+++ b/reg2.html
@@ -204,7 +204,7 @@
       }
   </style>
 
-<section>
+<section class="mt-5">
     <!-- Calendly inline widget begin -->
 <div class="calendly-inline-widget" data-url="https://calendly.com/whatisnextoffical/learn-with-whatisnext-in?hide_event_type_details=1&hide_gdpr_banner=1" style="min-width:320px;height:630px;"></div>
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
